Opção 4 revisada e alterada